--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <section id="summary" class="section">
           <h1 class="section__title"><span class="section__icon icon-summary"></span> Summary</h1>
           <div class="summary">
-            <p>I am looking for a position of a JS developer with a focus on the creation of high SPA using modern frameworks on both the client and the server. The reason I chose front-end is that I like coding and creating user-friendly interface. I have more than<a href='#experience'>one year</a> of commercial experience: creating and supporting <a href='#cases'>projects</a> with 100 and more pages, advanced experience adaptive markup. with 100 and more pages, advanced experience in adaptive markup. I value my time so using builders/precompilers and other <a href='#hard-skills'>cool stuff</a>.</p>
+            <p>I am looking for a position of a JS developer with a focus on the creation of high SPA using modern frameworks on both the client and the server. The reason I chose front-end is that I like coding and creating user-friendly interface. I have more than <a href='#experience'>one year</a> of commercial experience: creating and supporting <a href='#cases'>projects</a> with 100 and more pages, advanced experience adaptive markup. I value my time so using builders/precompilers and other <a href='#hard-skills'>cool stuff</a>.</p>
           </div>
         </section>
         <hr class="separator">
