--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
                   <dd class="main-info__value"><a href='//ua.linkedin.com/in/rudnitskih' target='_blank'>Dmytro Rudnytskykh</a></dd>
                 </div>
                 <div class="main-info__item visible-print">
-                  <dt class="main-info__label">Link on SV:</dt>
+                  <dt class="main-info__label">Link on CV:</dt>
                   <dd class="main-info__value">rudnitskih.pp.ua</dd>
                 </div>
               </dl>
-              <div class="main-info__links"><a href="//github.com/rudnitskih/SV" title="Source on github" target="_blank" class="sources__link"><span class="sources__icon icon-github"></span><span class="sources__title">Source on github</span></a><a href="SV_Frontend_Rudnytskykh.pdf" title="PDF version (generated using Phantom.js)" target="_self" class="sources__link"><span class="sources__icon icon-pdf"></span><span class="sources__title">PDF version (generated using Phantom.js)</span></a>
+              <div class="main-info__links"><a href="//github.com/rudnitskih/CV" title="Source on github" target="_blank" class="sources__link"><span class="sources__icon icon-github"></span><span class="sources__title">Source on github</span></a><a href="SV_Frontend_Rudnytskykh.pdf" title="PDF version (generated using Phantom.js)" target="_self" class="sources__link"><span class="sources__icon icon-pdf"></span><span class="sources__title">PDF version (generated using Phantom.js)</span></a>
               </div>
             </div>
             <div class="main-info__column main-info__column-right">
-              <div class="main-info__photo-container"><img src="http://rudnitskih.github.io/SV/assets/i/dsc8594.jpg" alt="" class="main-info__photo"></div>
+              <div class="main-info__photo-container"><img src="http://rudnitskih.github.io/CV/assets/i/dsc8594.jpg" alt="" class="main-info__photo"></div>
             </div>
           </div>
         </section>
